--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,12 +90,12 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
 
-#  fonts:
-#    - family: Schyler
-#      fonts:
-#         - asset: assets/fonts/Schyler-Regular.ttf
-#         - asset: fonts/Schyler-Italic.ttf
-
+  fonts:
+    - family: OpenSans
+      fonts:
+         - asset: assets/fonts/OpenSans-Bold.ttf
+         - asset: assets/fonts/OpenSans-Medium.ttf
+         - asset: assets/fonts/OpenSans-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
