--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   go_router: ^16.2.2
+  flutter_svg: ^2.2.1
+  pin_code_fields: ^8.0.1
+  provider: ^6.1.0
+  shared_preferences: ^2.3.2
+
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +71,7 @@ flutter:
 
   assets:
      - assets/images/
+     - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
