--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
   flutter_screenutil: ^5.9.3
   go_router: ^16.2.2
+  provider: ^6.1.0
+
+  flutter_bloc: ^8.1.3
+
   flutter_svg: ^2.2.1
   flutter_svg_provider: ^1.0.7
+
   pin_code_fields: ^8.0.1
-  provider: ^6.1.0
+  equatable: ^2.0.7
   shared_preferences: ^2.3.2
+
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  cloud_firestore: ^6.0.3
+  firebase_messaging: ^16.0.3
+  google_sign_in: ^7.2.0
 
 
 dev_dependencies:
