--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
 
   flutter_screenutil: ^5.9.3
   go_router: ^16.2.2
+  smooth_page_indicator: ^1.2.1
   provider: ^6.1.0
 
   flutter_bloc: ^8.1.3
