--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
 
   flutter_svg: ^2.2.1
   flutter_svg_provider: ^1.0.7
-
+  package_info_plus: ^9.0.0
   pin_code_fields: ^8.0.1
   equatable: ^2.0.7
   shared_preferences: ^2.3.2
