Add Home screen based on debug branch

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cloud_firestore: ^6.0.3
   firebase_messaging: ^16.0.3
   google_sign_in: ^7.2.0
+  carousel_slider: ^5.1.1
 
 
 dev_dependencies:
