--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   lottie: ^3.3.1
   google_fonts: ^6.3.2
   flutter_native_splash: ^2.4.7
+  dio: ^5.9.0
+  pretty_dio_logger: ^1.4.0
+  cached_network_image: ^3.4.1
 
 
 dev_dependencies:
