--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   dio: ^5.9.0
   pretty_dio_logger: ^1.4.0
   cached_network_image: ^3.4.1
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
